@@ -34,6 +34,9 @@ MINOR FEATURES
 
 IMPROVEMENTS
 
+* `split_vector` picks up a `regex` argument to allow for regular expression 
+  search of break location.
+
 CHANGES
 
 
